Fixed alignment on video border, also changed border

--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -314,6 +314,7 @@ body {
   margin-bottom:5px;
   cursor: pointer; cursor: hand;
   width: 100%;
+  border: 10px solid $trans-blue;
 }
 #video-privacy {
   margin-bottom:30px;
